--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # 开发服务器代理目标
-VUE_APP_DEV_PROXY_TARGET=http://106.13.225.19//online-collage-platform-server/public
+VUE_APP_DEV_PROXY_TARGET=http://localhost/barrage-video-website-serve/public
 # 是否使用 mock,改完记得重启
 VUE_APP_USE_MOCK=true
 # mock地址
