init:配置代理服务器

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 # 后端服务器URL前缀
 VUE_APP_API_URL_PREFIX=/api
+# 开发服务器代理目标
+VUE_APP_DEV_PROXY_TARGET=http://localhost/barrage-video-website-serve/public
