--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,4 @@
 # 开发服务器代理目标
 VUE_APP_DEV_PROXY_TARGET=http://localhost/barrage-video-website-serve/public
-# 是否使用 mock,改完记得重启
-VUE_APP_USE_MOCK=true
-# mock地址
-VUE_APP_MOCK_URL=http://106.13.225.19//eolinker4.0/server/index.php?g=Web&c=Mock&o=simple&projectID=28&uri=
+# 后端服务器URL前缀
+VUE_APP_API_URL_PREFIX=/api
