--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "core-js": "^3.3.2",
     "flv.js": "^1.5.0",
     "vue": "^2.6.10",
-    "vue-baberrage": "^3.2.4",
+    "vue-dplayer": "0.0.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
