--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 # 后端服务器URL前缀
 VUE_APP_API_URL_PREFIX=/api
 # 开发服务器代理目标
-VUE_APP_DEV_PROXY_TARGET=http://192.168.145.128/barrage-video-website-serve/public
+VUE_APP_DEV_PROXY_TARGET=http://192.168.0.103/barrage-video-website-serve/public
+# 直播服务器前缀
+VUE_APP_API_LIVE_PREFIX=/live
+# 服务器直播代理目标
+VUE_APP_LIVE_PROXY_TARGET=http://192.168.0.103:8080/barrage-video-website-serve/public
